<resources>
    <string name="app_name">BAI-App</string>
    <string name="sign_in_with_your_email_and_password">Sign in with your email and password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in">Sign In</string>
    <string name="email_addres">email_addres</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum Punya Akun</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">username</string>
    <string name="admin_code">Admin Code</string>
    <string name="login_now">Login!</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="register_account">Register Account</string>
    <string name="home">home</string>
    <string name="form">form</string>
    <string name="info">info</string>
    <string name="profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="psychologist_interface">Psychologist Interface</string>
    <string name="bai_assessment">BAI Assessment</string>
    <string name="total_patients">Total Patients</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="assessment_result">Assessment Result</string>
    <string name="view_and_review_bai_assessment_history_for_all_patients">View and review BAI assessment history for all patients</string>
    <string name="text_gad7">Over the last 2 weeks how oftern have you been bothered by the following problem?</string>
    <string name="todo">TODO</string>
    <string name="coution">Please read each item and select the reply which comes closest to how you have been feeling in the past week.</string>
    <string name="anxiety_7_items">Anxiety (7 items)</string>
    <string name="depression_7_item">Depression (7 item)</string>
    <string name="info_patient">Please fill in the patient\'s basic information before procceding with the assessment.</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="question">1. Feeling nervous, anxious, or on edge</string>
    <string name="not_at_all">Not at all</string>
    <string name="several_days">Several days</string>
    <string name="more_than_half_the_days">More than half the days</string>
    <string name="nearly_every_day">Nearly every day</string>
    <string name="description">0-7: Minimal anxiety\n8-15: Mild anxiety\n16-25: Moderate anxiety\n26-63: Severe anxiety</string>
</resources>